--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,8 +1,63 @@
-th.sorted.desc::after{
+h3 {
+    position: relative;
+    padding: 5px 5px 5px 42px;
+    background: #0099e4;
+    font-size: 20px;
+    color: white;
+    margin-left: -33px;
+    line-height: 1.3;
+    z-index: -1;
+}
+
+h3:before {
+    position: absolute;
+    content: '';
+    left: -2px;
+    top: -2px;
+    border: none;
+    border-left: solid 40px white;
+    border-bottom: solid 79px transparent;
+    z-index: -2
+}
+
+th.sorted.desc::after {
     display: inline-block;
     content: '▼';
 }
-th.sorted.asc::after{
+
+th.sorted.asc::after {
     display: inline-block;
     content: '▲';
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+thead th {
+    border-bottom: 2px solid #0099e4;
+    color: #0099e4;
+}
+
+tbody tr td,
+tbody tr th {
+    border-bottom: 1px solid #ccc;
+    transition: all 0.4s;
+    text-align: center;
+}
+
+tbody tr:hover td,
+tbody tr:hover th {
+    background: #f4fbff;
+}
+
+button {
+    border: none;
+    border-radius: 20px;
+    line-height: 20px;
+    padding: 0 8px;
+    background: #0099e4;
+    color: #fff;
+    cursor: pointer;
 }
