--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,51 @@
+.title-button {
+    position: relative;
+    display: block;
+    width: 100%;
+    color: white;
+    background-color: #0099e4;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    padding: 10px;
+    outline: none;
+    border: solid;
+    border-width: 4px 0px 4px 0px;
+    cursor: pointer;
+}
+
+.title-button:after {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border: solid transparent;
+    content: "";
+    border-top-color: white;
+    border-width: 7px;
+    position: absolute;
+    top: 50%;
+    right: 1em;
+    margin-top: -5px;
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+.title-button._state-open:after {
+    -webkit-transform: rotateX(180deg);
+    transform: rotateX(180deg);
+    margin-top: -10px;
+}
+
+.small-button {
+    border: none;
+    border-radius: 20px;
+    line-height: 20px;
+    padding: 0 8px;
+    background: #0099e4;
+    color: #fff;
+    cursor: pointer;
+}
+
 h3 {
     position: relative;
     padding: 5px 5px 5px 42px;
@@ -50,14 +98,4 @@ tbody tr th {
 tbody tr:hover td,
 tbody tr:hover th {
     background: #f4fbff;
-}
-
-button {
-    border: none;
-    border-radius: 20px;
-    line-height: 20px;
-    padding: 0 8px;
-    background: #0099e4;
-    color: #fff;
-    cursor: pointer;
 }
