--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -37,6 +37,25 @@
 }
 
 .small-button {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    color: white;
+    background: #0099e4;
+    border: none;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    padding: 0px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 100%;
+    cursor: pointer;
+}
+
+
+/*
+.small-button {
     border: none;
     border-radius: 20px;
     line-height: 20px;
@@ -67,6 +86,7 @@ h3:before {
     border-bottom: solid 79px transparent;
     z-index: -2
 }
+*/
 
 th.sorted.desc::after {
     display: inline-block;
